<resources>
    <string name="app_name">GPIO control</string>
    <string name="action_settings">Settings</string>
    <string name="show_device_id">Show device id</string>
    <string name="all_ports">All ports</string>
    <string name="ungrouped">Ungrouped</string>
    <string name="folder">folder</string>
    <string name="swap_group_state">swap_group_state</string>
    <string name="lock_for_device">lock for device</string>
    <string name="menu">menu</string>
    <string name="there_is_no_device_please_connect_at_least_one">There is no device. Please, connect at least one.</string>
    <string name="add_controller_dialog">Add controller</string>
    <string name="add_group">Add group</string>
    <string name="select_picture">Select picture</string>
    <string name="add_controller">Add controller</string>
    <string name="controller_id">Controller ID</string>
    <string name="name_for_ports">Name for ports</string>
    <string name="cancel">Cancel</string>
    <string name="image_for_ports">Image for ports</string>
    <string name="group_picture">Picture for group</string>
    <string name="image_from_templates">Image from templates</string>
    <string name="image_from_gallery">Image from gallery</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_image">Choose image</string>
    <string name="no_internet_connection">You have no internet connection</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="account">Account</string>
    <string name="log_out">Log out</string>
    <string name="remove_controller">Remove controller</string>
    <string name="edit_lock_password">Edit lock password</string>
    <string name="device_management">Device management</string>
    <string name="device_switch_management">Device switch management</string>
    <string name="change_password">Change password</string>
    <string name="input_password">Input password</string>
    <string name="create_password_title">Create password</string>
    <string name="create_password_message">This is the first lock in this system. You need to create a password. In the future you can change it.</string>
    <string name="change_password_title">Change password</string>
    <string name="change_password_message">"Your current password: "</string>
    <string name="edit_text_cant_be_empty_error">Can\'t be empty</string>
    <string name="edit_image">Edit image</string>
    <string name="edit_name">Edit name</string>
    <string name="add_to_group">Add to group</string>
    <string name="there_is_no_alarm_please_add_at_least_one">There is no alarm. Please, add at least one.</string>
    <string name="action">Action</string>
    <string name="power_off">Power off</string>
    <string name="power_on">Power on</string>
    <string name="toggle">Toggle</string>
    <string name="repeat">Repeat</string>
    <string name="alarm_name">Alarm name</string>
    <string name="add_alarm">Add alarm</string>
    <string name="device_name_header">Devices (%1$d)</string>
    <string name="remove_from_group">Remove from group</string>
    <string name="duplicate">Duplicate</string>
    <string name="ungroup">Ungroup</string>
    <string name="submit">Submit</string>
    <string name="log_out_question">Log out?</string>
    <string name="group_name">Group name</string>
    <string name="create_group">Create group</string>
    <string name="controller_was_added">Controller was added</string>
    <string name="ok">OK</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="alarm">Alarm</string>
    <string name="alarm_was_added">Alarm was added</string>
    <string name="controller_adding_error">Error was occurred while adding controller (timeout)</string>

</resources>
