<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/device_switch_management"
            android:icon="@drawable/device_switch_management"
            android:title="@string/device_switch_management"/>
        <item
            android:id="@+id/device_management"
            android:icon="@drawable/device_management"
            android:title="@string/device_management"/>
        <item
            android:id="@+id/remove_controller"
            android:icon="@drawable/remove_controller"
            android:title="@string/remove_controller"/>
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/edit_lock_password"
                android:icon="@drawable/edit_lock_password"
                android:title="@string/edit_lock_password"/>
            <item
                android:id="@+id/log_out"
                android:icon="@drawable/logout"
                android:title="@string/log_out"/>
        </menu>
    </item>

</menu>
