<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginBottom="2dp"
    app:elevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:alpha="0.54"
                android:contentDescription="@string/folder"
                app:srcCompat="@drawable/empty_group_icon"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.87"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    tools:text="Some group"/>

                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alpha="0.54"
                    android:textColor="@android:color/black"
                    tools:text="3/12 activated"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center">

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:alpha="0.87"
                android:background="@null"
                android:theme="@style/SwitchStyle"/>

            <ImageView
                android:id="@+id/group_swap_state"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:alpha="0.87"
                android:contentDescription="@string/swap_group_state"
                app:srcCompat="@drawable/toggle_active"/>

            <ImageView
                android:id="@+id/lock"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:alpha="0.87"
                android:contentDescription="@string/lock_for_device"
                app:srcCompat="@drawable/alarm_activated"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>