<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="#edeef0">

    <TextView
        android:id="@+id/no_device_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:alpha="0.87"
        android:gravity="center"
        android:text="@string/there_is_no_device_please_connect_at_least_one"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:visibility="gone"
        tools:visibility="visible"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_input_add"
        android:tint="@android:color/white"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:id="@+id/selection_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="3dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/cancel_selection"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.54"
                        android:rotation="45"
                        app:srcCompat="@drawable/add_for_floatbutton"/>

                    <TextView
                        android:id="@+id/selected_count_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        tools:text="Selected 2/2"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:baselineAligned="false"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/power_on"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:gravity="center"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/ic_power_on"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            app:srcCompat="@drawable/power_on"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/power_on"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/power_off"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:gravity="center"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/ic_power_off"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            app:srcCompat="@drawable/power_on"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/power_off"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/toggle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:gravity="center"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/ic_toggle"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            app:srcCompat="@drawable/toggle_active"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/toggle"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/device_lock_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <LinearLayout
                        android:id="@+id/lock"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:gravity="center"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/ic_lock"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            app:srcCompat="@drawable/lock_activated"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:clickable="true"
                            android:gravity="center"
                            android:text="@string/lock"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/unlock"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:clickable="true"
                        android:gravity="center"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/ic_unlock"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            app:srcCompat="@drawable/lock_notactivated"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/unlock"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/alarm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="8dp"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <ImageView
                        android:id="@+id/ic_alarm"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/alarm_notactivated"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/alarm"/>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>
